    should sort nicely before 1.10.99.901, which should be the first
    release candidate for 1.11.
  * Bump serverminver, as well as input and video ABI.
  * Adapt 15-nouveau.diff to cope with the glxdricommon-ification of
    GLX probing. Nouveau users might still see an error (EE) mentioning
    the fallback to software rendering.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 31 May 2011 13:52:04 +0200

xorg-server (2:1.10.2-1) unstable; urgency=low

  * New upstream release.
  * Add 20-workaround-36986.diff to avoid test failures on *i386.
  * On GNU/kFreeBSD, enable HAL support for the main build, but disable it
    for the udeb build, thanks to Robert Millan (Closes: #596586).

 -- Cyril Brulebois <kibi@debian.org>  Mon, 30 May 2011 11:37:37 +0200

xorg-server (2:1.10.1.901-1) experimental; urgency=low

  * New upstream release (1.10.2 rc1):
    - Comes with some Xi fixes.
    - Comes with many GLX fixes.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 07 May 2011 13:27:28 +0200

xorg-server (2:1.10.1-2) unstable; urgency=low

  * Build xserver-xorg-core-udeb on hurd-i386.  Thanks, Samuel Thibault!
  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Thu, 28 Apr 2011 13:28:58 +0200

xorg-server (2:1.10.1-1) experimental; urgency=low

  * New upstream release.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 19 Apr 2011 03:08:08 +0200

xorg-server (2:1.10.0.902-1) experimental; urgency=low

  * New upstream release (1.10.1 rc2).

 -- Cyril Brulebois <kibi@debian.org>  Sat, 09 Apr 2011 04:18:28 +0200

xorg-server (2:1.10.0.901-1) experimental; urgency=low

  * New upstream release (1.10.1 rc1).
  * Relax build-dep and dep on x11proto-randr-dev since the XRandR 1.4
    bits were finally reverted upstream.
  * Remove patch: 16-construct-paths-in-doxygen.conf.diff (merged
    upstream).
  * Pass --enable-xcsecurity to the main build to restore the XC-SECURITY
    extension, thanks to Stefan Fritsch's report (Closes: #599657).
