@@ -1,14 +1,13 @@
 Workaround fdo#36986 <http://bugs.freedesktop.org/show_bug.cgi?id=36986>
 --- a/test/input.c
 +++ b/test/input.c
-@@ -1213,8 +1213,10 @@
+@@ -1223,8 +1223,10 @@ static void dix_valuator_alloc(void)
  
-         g_assert(v);
-         g_assert(v->numAxes == num_axes);
+         assert(v);
+         assert(v->numAxes == num_axes);
 +#if 0
-         g_assert(((void*)v->axisVal - (void*)v) % sizeof(double) == 0);
-         g_assert(((void*)v->axes - (void*)v) % sizeof(double) == 0);
+         assert(((void*)v->axisVal - (void*)v) % sizeof(double) == 0);
+         assert(((void*)v->axes - (void*)v) % sizeof(double) == 0);
 +#endif
          num_axes ++;
      }
- 
