@@ -7,6 +7,7 @@ xorg-server (2:1.10.99.1-1) UNRELEASED; urgency=low
   * Adapt 15-nouveau.diff to cope with the glxdricommon-ification of
     GLX probing. Nouveau users might still see an error (EE) mentioning
     the fallback to software rendering.
+  * Refresh 20-workaround-36986.diff.
 
  -- Cyril Brulebois <kibi@debian.org>  Tue, 31 May 2011 13:52:04 +0200
 
